# probable-guacamole

./: .gitignore  Dockerfile  Dockerfile-awz  README.md  design.md  docker-compose-awz.yml  docker-compose.yml  gunicorn.conf.py  main.py  manage.py  pip.conf  pyproject.toml  requirements.txt  wr-3.html  wr.html
h5App/wr-project/: package-lock.json  package.json  tailwind.config.js  vite.config.js
h5App/wr-project/src/: App.vue  main.js  style.css
h5App/wr-project/src/assets/: cropper.css
h5App/wr-project/src/components/: AccessCodeInput.vue  LanguageSwitcher.vue  ProductResult.vue  QrCodeUploader.vue  RegistrationForm.vue  WarrantyRegistration.vue
h5App/wr-project/src/utils/: request.js
innrg/: asgi.py  settings.py  urls.py  wsgi.py
nginx/conf.d/: default-aws.conf  default.conf
productApp/: admin.py  generate_random_string.py  models.py  serializers.py  urls.py  views.py
productApp/migrations/: 0001_initial.py  0002_producttype_user_city_user_country_product_and_more.py  0003_alter_product_product_type.py  0004_remove_product_customer_product_city_product_country_and_more.py  0005_product_factory_remark.py  0006_alter_product_qrcode_id_and_more.py  0007_alter_operationrecord_operator.py  0008_accesscode_product_installer.py  0009_attachment.py  0010_remove_repairrecord_customer_repairrecord_address_and_more.py  0011_attachment_file_name.py
productApp/tests/: test_attachments.py
productApp/utils/: qiniu_tools.py  wx_notify.py
templates/: qr_demo.html  warranty-registration.html
templates/admin/productApp/product/: bulk_create.html  change_list.html
