[project]
name = "innrg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "asgiref==3.8.1",
    "django==5.2.3",
    "django-cors-headers==4.7.0",
    "django-filter==25.1",
    "djangorestframework==3.16.0",
    "djangorestframework-simplejwt==5.5.0",
    "greenlet==3.2.3",
    "numpy==2.2.6",
    "opencv-python==4.11.0.86",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pyjwt==2.9.0",
    "python-dotenv==1.1.1",
    "pyzbar==0.1.9",
    "sqlalchemy==2.0.41",
    "sqlparse==0.5.3",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
]
